--- a/themes/hugo-sustain/layouts/index.html
+++ b/themes/hugo-sustain/layouts/index.html
@@ -9,7 +9,8 @@
           <img class="img-circle" src="{{ .Site.BaseURL }}img/{{ .Site.Params.avatar }}" alt="Responsive image">
         </div>
         <h3>I'm <strong>{{ .Site.Params.author }}</strong>, a Software Engineer.</h3>
-        <h3>Contact me at:</h3>
+        <h3>I currently work at <strong>Globo.com</strong> streaming live video.</h3>
+        <h3> <strong>Rio de Janeiro</strong> based.</h3>
         {{ partial "social.html" . }}
       </div>
     </section>
